--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@theme {
+  --color-purple-50: #faf5ff;
+  --color-purple-100: #f3e8ff;
+  --color-purple-600: #9333ea;
+  --color-purple-700: #7e22ce;
+  --color-purple-800: #6b21a8;
+}
